--- a/MaratonaDev/style.css
+++ b/MaratonaDev/style.css
@@ -4,9 +4,22 @@ CASCADING STYLESHEET
 ORGANIZAR: ALINHAMENTOS, ESPAÇAMENTOS, LARGURAS E ALTURAS 
 
 */
+* {
+    /* corrigindo comportamento padrão css*/    
+    box-sizing: border-box;
+}
 
 html, body {
     margin: 0;
+}
+
+.logo {
+    width: 200px;
+    margin: 70px 0;
+}
+
+header p {
+    font-size: 14px;
 }
 
 body {
@@ -17,7 +30,14 @@ body {
 
     /* fonte */
     font-family: 'Roboto', sans-serif;
+
+    background-color: #f9f9f9;
 }
+
+h1, h2 {
+    color: #000000cc;
+}
+
 
 footer {
     margin-top: auto;
@@ -27,8 +47,14 @@ footer {
 header h1, main h2 {
     margin-bottom: 70px;
 }
+
+main h2 span {
+    color: #ff4f4f;
+}
 .form h2 {
     text-align: right;    
+    color: #ffffffee;
+    font-size: 18px;
 }
 
 /* ESTRUTURA */
@@ -48,16 +74,37 @@ header, .form, main {
 
 /* HEADER */
 header button {
+    margin-top: 16px;
     padding: 8px 16px;
     border-radius: 4px;
+    border: none;
+
+    background-color: #ff4f4f;
+    color: white;
+
+    font-weight: bold;
 }
 
 /* FORM */
 section.form {
     display: grid;
     grid-template-columns: 1fr 1fr;
-
     grid-gap: 45px;
+    align-items: center;
+
+
+    background-color: #ff4f4f;
+
+    padding: 16px 64px;
+
+    border-radius: 6px;
+}
+
+section.form input{   
+    background-color: transparent;
+    border-color: #d6d6d6;
+    
+   
 }
 
 form input, form button {
@@ -68,20 +115,67 @@ form input, form button {
     /* espaçamentos */     
     margin-bottom: 4px;
 
-    /* corrigindo comportamento padrão css*/    
-    box-sizing: border-box;
-
     /* preenchimento */
     padding: 8px 16px 8px 16px;
 
     /* bordas */
     border-radius: 4px;
-    border: 1px red solid
+    border: 1px #ffffff88 solid;
+  
 }
+
+form input::placeholder {
+    color: #ffffffaa;
+}
+
+form button {
+    color: black;
+    font-weight: bold;
+    background-color: white;
+    border-color: white;
+}
+
+/* MAIN */
 
 main .donors {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.blood {
+    color: #ff4f4f;
+    font-weight: bold;
+    font-size: 12px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    position: relative;
+    
+    
+}
+
+.blood::before {
+    content: "";
+    background-color: #ff4f4f11;
+    
+    width: 40px;
+    height: 40px;
+
+    position: absolute;
+
+    /*fazer a gotinha */
+    border-radius: 50%;
+    border-top-right-radius: 0;
+
+    transform: rotate(-45deg);
+
+}
+
+.donor p {
+    margin-top: 24px;
+    font-size: 14px;
 }
 
 footer {
@@ -89,4 +183,16 @@ footer {
     padding: 16px;
 
     border: 1px solid #eee;
+}
+
+/* funcionalidades com javascript */
+section.form {
+    transition: all 600ms;
+}
+
+section.form.hide {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+    margin-top: -70px;
 }
